<resources>
    <string name="app_name">Shopping List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_list_input_hint">Titel boodschappenlijst</string>
    <string name="label_shared">Gedeeld</string>
    <string name="label_token">Token</string>
    <string name="label_list_contents">Boodschappen:</string>
    <string name="button_list_create_text">Aanmaken</string>
    <string name="btn_view_text">Bekijk</string>
    <string name="btn_delete_text">Verwijder</string>
    <string name="join_list_title">Doe mee met een lijst</string>
    <string name="token_input_hint">Token boodschappenlijst</string>
    <string name="join_button_text">Meedoen</string>
    <string name="create_button_text">Zelf aanmaken</string>
    <string name="name_input_hint">Naam</string>
    <string name="quantity_input_hint">Aantal</string>
    <string name="add_item_text">Item toevoegen</string>
    <string name="clear_history">Alles verwijderen</string>
    <string name="title_activity_edit_list">EditListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="togglebutton_text">ToggleButton</string>
    <string name="token_placholder">Token placholder</string>
    <string name="list_item_preface">-</string>
    <string name="list_item_times">x</string>
    <string name="suggestions">Suggestions</string>
</resources>
